<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/sort_by"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/dark_grey"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/sort_by_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="@string/sort_by_date"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <TextView
        android:id="@+id/sort_by_date_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="@string/sort_by_date_desc"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/sort_by_date" />

    <TextView
        android:id="@+id/sort_by_mission_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="@string/sort_by_mission_name"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/sort_by_date_desc" />

    <TextView
        android:id="@+id/sort_by_mission_name_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:gravity="left"
        android:text="@string/sort_by_mission_name_desc"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/sort_by_mission_name" />

</androidx.constraintlayout.widget.ConstraintLayout>